--- a/tambah-stok-masuk.html
+++ b/tambah-stok-masuk.html
@@ -204,9 +204,9 @@
   <div class="container">
     <div class="form-section">
       <div class="form-group">
-        <label>Tanggal dan Aktifitas</label>
+        <label>Tanggal dan Aktivitas</label>
         <div class="status">Belum dipilih</div>
-        <div class="link" onclick="window.location.href='pilih-tanggal-dan-aktivitas.html'">Tekan di sini untuk pilih tanggal dan aktifitas</div>
+        <div class="link" onclick="window.location.href='pilih-tanggal-dan-aktivitas.html'">Tekan di sini untuk pilih tanggal dan aktivitas</div>
       </div>
 
       <div class="form-group">
@@ -220,16 +220,16 @@
 
     <div class="form-section">
       <div class="form-group">
-        <label>Tulis total timbangan di sini</label>
-        <input type="text" placeholder="Enter Input" />
+        <label>Total Timbangan</label>
+        <input type="number" placeholder="Tulis total timbangan di sini" />
       </div>
       <div class="form-group">
-        <label>Tulis total berat di sini (dalam kg)</label>
-        <input type="text" placeholder="Enter Input" />
+        <label>Total Berat (dalam kg)</label>
+        <input type="number" placeholder="Tulis total berat di sini" />
       </div>
       <div class="form-group">
-        <label>Tulis total berat di sini (dalam kg)</label>
-        <input type="text" placeholder="Enter Input" />
+        <label>Total Barang</label>
+        <input type="number" placeholder="Tulis total barang di sini" />
       </div>
     </div>
 
