--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pilih Tanggal dan aktivitas</title>
+  <title>Pilih Tanggal dan Aktivitas</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -187,7 +187,7 @@
     Kembali
   </div>
 
-  <div class="section-title">Pilih Tanggal dan aktivitas</div>
+  <div class="section-title">Pilih Tanggal dan Aktivitas</div>
   <div class="subsection">Depok</div>
 
   <div class="container">
