--- a/tambah-stok-masuk.html
+++ b/tambah-stok-masuk.html
@@ -113,6 +113,14 @@
       color: #333;
     }
 
+    input[type="number"] {
+      padding: 12px 14px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      font-size: 15px;
+      color: #333;
+    }
+
     input::placeholder {
       color: #bbb;
     }
