--- a/tambah-stok-masuk.html
+++ b/tambah-stok-masuk.html
@@ -220,7 +220,7 @@
       <div class="form-group">
         <label>Asal, Jenis, dan Petugas</label>
         <div class="status">Belum dipilih</div>
-        <div class="link">Tekan di sini untuk pilih asal, jenis, dan petugas</div>
+        <div class="link" onclick="window.location.href='pilih-asal-jenis-dan-petugas.html'">Tekan di sini untuk pilih asal, jenis, dan petugas</div>
       </div>
     </div>
 
