--- a/pilih-layanan.html
+++ b/pilih-layanan.html
@@ -70,6 +70,11 @@
       align-items: center;
       gap: 16px;
       transition: transform 0.2s ease;
+      -webkit-user-select: none; /* Safari */
+      -moz-user-select: none;    /* Firefox */
+      -ms-user-select: none;     /* IE10+/Edge */
+      user-select: none;         /* Standard */
+      -webkit-touch-callout: none;
     }
 
     .menu-card:hover {
