--- a/pilih-catatan.html
+++ b/pilih-catatan.html
@@ -33,6 +33,11 @@
       font-weight: 600;
       color: #264d33;
       cursor: pointer;
+      -webkit-user-select: none; /* Safari */
+      -moz-user-select: none;    /* Firefox */
+      -ms-user-select: none;     /* IE10+/Edge */
+      user-select: none;         /* Standard */
+      -webkit-touch-callout: none;
     }
 
     .top-bar:hover {
@@ -77,6 +82,11 @@
       align-items: center;
       gap: 16px;
       transition: transform 0.2s ease;
+      -webkit-user-select: none; /* Safari */
+      -moz-user-select: none;    /* Firefox */
+      -ms-user-select: none;     /* IE10+/Edge */
+      user-select: none;         /* Standard */
+      -webkit-touch-callout: none;
     }
 
     .menu-card:hover {
