--- a/tambah-stok-masuk.html
+++ b/tambah-stok-masuk.html
@@ -34,6 +34,11 @@
       font-weight: 600;
       color: #264d33;
       cursor: pointer;
+      -webkit-user-select: none; /* Safari */
+      -moz-user-select: none;    /* Firefox */
+      -ms-user-select: none;     /* IE10+/Edge */
+      user-select: none;         /* Standard */
+      -webkit-touch-callout: none;
     }
 
     .top-bar:hover {
@@ -98,6 +103,11 @@
       text-decoration: underline;
       cursor: pointer;
       font-weight: 600;
+      -webkit-user-select: none; /* Safari */
+      -moz-user-select: none;    /* Firefox */
+      -ms-user-select: none;     /* IE10+/Edge */
+      user-select: none;         /* Standard */
+      -webkit-touch-callout: none;
     }
 
     .divider {
@@ -135,6 +145,11 @@
       font-weight: 600;
       text-decoration: underline;
       cursor: pointer;
+      -webkit-user-select: none; /* Safari */
+      -moz-user-select: none;    /* Firefox */
+      -ms-user-select: none;     /* IE10+/Edge */
+      user-select: none;         /* Standard */
+      -webkit-touch-callout: none;
     }
 
     .image-preview {
