--- a/pilih-asal-jenis-dan-petugas.html
+++ b/pilih-asal-jenis-dan-petugas.html
@@ -34,6 +34,11 @@
       font-weight: 600;
       color: #264d33;
       cursor: pointer;
+      -webkit-user-select: none; /* Safari */
+      -moz-user-select: none;    /* Firefox */
+      -ms-user-select: none;     /* IE10+/Edge */
+      user-select: none;         /* Standard */
+      -webkit-touch-callout: none;
     }
 
     .top-bar svg {
@@ -94,6 +99,11 @@
       text-decoration: underline;
       cursor: pointer;
       font-weight: 600;
+      -webkit-user-select: none; /* Safari */
+      -moz-user-select: none;    /* Firefox */
+      -ms-user-select: none;     /* IE10+/Edge */
+      user-select: none;         /* Standard */
+      -webkit-touch-callout: none;
     }
     
     .bottom-sheet {
