--- a/pilih-aktivitas.html
+++ b/pilih-aktivitas.html
@@ -108,7 +108,7 @@
     <button class="button-option" onclick="sendData(this)">Harian</button>
     <button class="button-option" onclick="sendData(this)">Rekapitulasi Tambahan</button>
     <div class="desc">
-      Pilih rekapitulasi tambahan untuk daftarkan stok masuk yang tidak diketahui pasti tanggal datangnya dan berasal dari beberapa tanggal yang berbeda.
+      Pilih rekapitulasi tambahan untuk barang yang tidak diketahui pasti tanggal datangnya dan berasal dari beberapa tanggal yang berbeda.
     </div>
   </div>
 
