--- a/pilih-asal.html
+++ b/pilih-asal.html
@@ -103,6 +103,24 @@
       border-top: 1px solid #e0e0e0;
       margin: 12px 0 0;
     }
+
+    .upload-link {
+      text-align: center;
+      margin: 4px 0 0;
+      font-size: 14px;
+    }
+
+    .upload-link a {
+      color: #2f7a3e;
+      font-weight: 600;
+      text-decoration: underline;
+      cursor: pointer;
+      -webkit-user-select: none; /* Safari */
+      -moz-user-select: none;    /* Firefox */
+      -ms-user-select: none;     /* IE10+/Edge */
+      user-select: none;         /* Standard */
+      -webkit-touch-callout: none;
+    }
   </style>
 </head>
 <body>
@@ -130,11 +148,11 @@
 
     <div class="bottom-divider"></div>
 
-    <div class="upload-link" id="uploadLink">
+    <div class="upload-link">
       <a href="#">Tekan di sini</a> untuk muat sebelumnya
     </div>
 
-    <div class="upload-link" id="uploadLink">
+    <div class="upload-link">
       <a href="#">Tekan di sini</a> untuk muat selanjutnya
     </div>
   </div>
