--- a/pilih-asal.html
+++ b/pilih-asal.html
@@ -97,11 +97,8 @@
     .divider {
       border-top: 1px solid #e0e0e0;
       margin: 12px 0;
-    }
-
-    .bottom-divider {
-      border-top: 1px solid #e0e0e0;
-      margin: 12px 0 0;
+      align-self: stretch;
+      width: 100%;
     }
 
     .upload-link {
@@ -145,8 +142,6 @@
     <button class="button-option" onclick="sendData(this)">Sultan</button>
     <button class="button-option" onclick="sendData(this)">Wowo</button>
     <button class="button-option" onclick="sendData(this)">Wowi</button>
-
-    <div class="bottom-divider"></div>
 
     <div class="upload-link">
       <a href="#">Tekan di sini</a> untuk muat sebelumnya
