--- a/pilih-bentuk.html
+++ b/pilih-bentuk.html
@@ -94,6 +94,7 @@
       cursor: pointer;
     }
 
+    /*
     .menu-icon {
       background-color: #e8efe9;
       border-radius: 50%;
@@ -106,6 +107,18 @@
     .menu-icon img {
       width: 42px;
       height: 42px;
+    }
+    */
+    
+    .menu-icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .menu-icon img {
+      width: 63px;
+      height: 63px;
     }
 
     .menu-label {
