--- a/pilih-bentuk.html
+++ b/pilih-bentuk.html
@@ -147,16 +147,16 @@
   <div class="container">
     <div class="menu-card" onclick="window.location.href='tambah-stok-masuk.html'">
       <div class="menu-icon">
-        <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1744558351/icon-tambah-catatan_lzchwt.png" alt="Tambah Catatan">
+        <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1745611946/icon-karung_mx3psd.png" alt="Karung">
       </div>
-      <div class="menu-label">Tambah Catatan</div>
+      <div class="menu-label">Karung</div>
     </div>
 
     <div class="menu-card">
       <div class="menu-icon">
-        <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1744558352/icon-lihat-catatan_mkbhbe.png" alt="Lihat Catatan">
+        <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1745611945/icon-bal_fj7qqp.png" alt="Bal">
       </div>
-      <div class="menu-label">Lihat Catatan</div>
+      <div class="menu-label">Bal</div>
     </div>
   </div>
 
