--- a/pilih-asal.html
+++ b/pilih-asal.html
@@ -101,6 +101,13 @@
       width: 100%;
     }
 
+    .bottom-divider {
+      border-top: 1px solid #e0e0e0;
+      margin: 12px 0 0;
+      align-self: stretch;
+      width: 100%;
+    }
+
     .upload-link {
       text-align: center;
       margin: 4px 0 0;
@@ -143,6 +150,8 @@
     <button class="button-option" onclick="sendData(this)">Wowo</button>
     <button class="button-option" onclick="sendData(this)">Wowi</button>
 
+    <div class="bottom-divider"></div>
+    
     <div class="upload-link">
       <a href="#">Tekan di sini</a> untuk muat sebelumnya
     </div>
