--- a/pilih-asal-jenis-dan-petugas.html
+++ b/pilih-asal-jenis-dan-petugas.html
@@ -222,6 +222,15 @@
       //window.location.replace(url);
     }
 
+    function sendData_Jenis() {
+      const value_1 = document.getElementById('asalStatus').innerText; // or textContent
+      const value_2 = document.getElementById('jenisStatus').innerText; // or textContent
+      const value_3 = document.getElementById('petugasStatus').innerText; // or textContent
+      const url = `pilih-jenis.html?asl=${encodeURIComponent(value_1)}&jns=${encodeURIComponent(value_2)}&ptgs=${encodeURIComponent(value_3)}`;
+      window.location.href = url;
+      //window.location.replace(url);
+    }
+
     function reset() {
       const statusEl_1 = document.getElementById('asalStatus');
       const statusEl_2 = document.getElementById('jenisStatus');
