--- a/pilih-bentuk.html
+++ b/pilih-bentuk.html
@@ -136,7 +136,7 @@
 </head>
 <body>
 
-  <div class="top-bar" onclick="window.history.back()">
+  <div class="top-bar" onclick="sendDataBack()">
     <svg fill="none" viewBox="0 0 24 24"><path stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7"/></svg>
     Kembali
   </div>
@@ -145,14 +145,14 @@
   <div class="subsection">Depok</div>
 
   <div class="container">
-    <div class="menu-card" onclick="window.location.href='tambah-stok-masuk.html'">
+    <div class="menu-card" onclick="sendData(this)">
       <div class="menu-icon">
         <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1745611946/icon-karung_mx3psd.png" alt="Karung">
       </div>
       <div class="menu-label">Karung</div>
     </div>
 
-    <div class="menu-card">
+    <div class="menu-card" onclick="sendData(this)">
       <div class="menu-icon">
         <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1745611945/icon-bal_fj7qqp.png" alt="Bal">
       </div>
@@ -160,5 +160,27 @@
     </div>
   </div>
 
+  <script>
+    function sendData_Jenis_2(button) {
+      const value = button.innerText; // Or button.textContent
+      const params = new URLSearchParams(window.location.search);
+      const asal = params.get('jns');
+      const petugas = params.get('ptgs');
+      const url = `pilih-asal-jenis-dan-petugas.html?asl=${encodeURIComponent(asal)}&jns=${encodeURIComponent(value)}&ptgs=${encodeURIComponent(petugas)}`;
+      //window.location.href = url;
+      window.location.replace(url);
+    }
+
+    function sendDataBack() {
+      const params = new URLSearchParams(window.location.search);
+      const asal = params.get('asl') || 'Belum dipilih';
+      const jenis = params.get('jns') || 'Belum dipilih';
+      const petugas = params.get('ptgs') || 'Belum dipilih';
+      const url = `pilih-asal-jenis-dan-petugas.html?asl=${encodeURIComponent(asal)}&jns=${encodeURIComponent(jenis)}&ptgs=${encodeURIComponent(petugas)}`;
+      //window.location.href = url;
+      window.location.replace(url);
+    }
+  </script>
+  
 </body>
 </html>
