--- a/pilih-bentuk.html
+++ b/pilih-bentuk.html
@@ -145,14 +145,14 @@
   <div class="subsection">Depok</div>
 
   <div class="container">
-    <div class="menu-card" onclick="sendData(this)">
+    <div class="menu-card" onclick="sendData_Jenis_2(this)">
       <div class="menu-icon">
         <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1745611946/icon-karung_mx3psd.png" alt="Karung">
       </div>
       <div class="menu-label">Karung</div>
     </div>
 
-    <div class="menu-card" onclick="sendData(this)">
+    <div class="menu-card" onclick="sendData_Jenis_2(this)">
       <div class="menu-icon">
         <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1745611945/icon-bal_fj7qqp.png" alt="Bal">
       </div>
