--- a/pilih-bentuk.html
+++ b/pilih-bentuk.html
@@ -164,7 +164,7 @@
     function sendData_Jenis_2(button) {
       const value = button.innerText; // Or button.textContent
       const params = new URLSearchParams(window.location.search);
-      const asal = params.get('jns');
+      const asal = params.get('asl');
       const petugas = params.get('ptgs');
       const url = `pilih-asal-jenis-dan-petugas.html?asl=${encodeURIComponent(asal)}&jns=${encodeURIComponent(value)}&ptgs=${encodeURIComponent(petugas)}`;
       //window.location.href = url;
