--- a/pilih-jenis.html
+++ b/pilih-jenis.html
@@ -159,7 +159,7 @@
       const value = button.innerText; // Or button.textContent
       const params = new URLSearchParams(window.location.search);
       const asal = params.get('asl');
-      const jenis = params.get('jns') + ', ' + value;
+      const bentuk = params.get('bntk') + ', ' + value;
       const petugas = params.get('ptgs');
       const url = `pilih-asal-jenis-dan-petugas.html?asl=${encodeURIComponent(asal)}&jns=${encodeURIComponent(jenis)}&ptgs=${encodeURIComponent(petugas)}`;
       //window.location.href = url;
