--- a/pilih-aktivitas.html
+++ b/pilih-aktivitas.html
@@ -116,7 +116,7 @@
     function sendData(button) {
       const value = button.innerText; // Or button.textContent
       const params = new URLSearchParams(window.location.search);
-      const tanggal = params.get('tgl');
+      const tanggal = params.get('tgl') || 'Belum dipilih';
       const url = `pilih-tanggal-dan-aktivitas.html?tgl=${encodeURIComponent(tanggal)}&aktv=${encodeURIComponent(value)}`;
       //window.location.href = url;
       window.location.replace(url);
