--- a/pilih-asal.html
+++ b/pilih-asal.html
@@ -165,8 +165,8 @@
     function sendData(button) {
       const value = button.innerText; // Or button.textContent
       const params = new URLSearchParams(window.location.search);
-      const jenis = params.get('jns');
-      const petugas = params.get('ptgs');
+      const jenis = params.get('jns') || 'Belum dipilih';
+      const petugas = params.get('ptgs') || 'Belum dipilih';
       const url = `pilih-asal-jenis-dan-petugas.html?asl=${encodeURIComponent(value)}&jns=${encodeURIComponent(jenis)}&ptgs=${encodeURIComponent(petugas)}`;
       //window.location.href = url;
       window.location.replace(url);
