--- a/pilih-aktivitas.html
+++ b/pilih-aktivitas.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+  <script>
+    window.addEventListener('pageshow', function (event) {
+      console.log('Cek load halaman');
+      const flag = localStorage.getItem('flagBack') || 'true';
+      if(flag == 'true') {
+	localStorage.setItem('flagBack', 'false');
+	const url = `tambah-stok-masuk.html`;
+	window.location.href = url;
+	}
+    });
+  </script>
+	
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pilih Aktivitas</title>
@@ -113,36 +125,7 @@
   </div>
 
   <script>
-	//ini untuk handling back-button
-	const flag = localStorage.getItem('flagBack') || 'true';
-	if(flag == 'true') {
-	  localStorage.setItem('flagBack', 'false');
-	  const url = `tambah-stok-masuk.html`;
-	  window.location.href = url;
-	}
-
-window.addEventListener('pageshow', function (event) {
-    console.log('Halaman dimuat atau muncul dari cache!');
-
-	const flag = localStorage.getItem('flagBack') || 'true';
-	if(flag == 'true') {
-	  localStorage.setItem('flagBack', 'false');
-	  const url = `tambah-stok-masuk.html`;
-	  window.location.href = url;
-	}
-
 	
-    if (event.persisted) {
-      console.log('Halaman ini dari bfcache (Back-Forward Cache)');
-
-	    const flag = localStorage.getItem('flagBack') || 'true';
-	if(flag == 'true') {
-	  localStorage.setItem('flagBack', 'false');
-	  const url = `tambah-stok-masuk.html`;
-	  window.location.href = url;
-	}
-    }
-  });
 	  
 	function sendData(button) {
       const value = button.innerText; // Or button.textContent
