--- a/pilih-asal-jenis-dan-petugas.html
+++ b/pilih-asal-jenis-dan-petugas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pilih Asalm, Jenis, dan Petugas</title>
+  <title>Pilih Asal, Jenis, dan Petugas</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
