--- a/pilih-aktivitas.html
+++ b/pilih-aktivitas.html
@@ -2,15 +2,24 @@
 <html lang="id">
 <head>
   <script>
-    window.addEventListener('pageshow', function (event) {
-      console.log('Cek load halaman');
-      const flag = localStorage.getItem('flagBack') || 'true';
+
+window.addEventListener('pageshow', function (event) {
+    console.log('Halaman dimuat atau muncul dari cache!');
+    if (event.persisted) {
+      console.log('Halaman ini dari bfcache (Back-Forward Cache)');
+
+const flag = localStorage.getItem('flagBack') || 'true';
       if(flag == 'true') {
 	localStorage.setItem('flagBack', 'false');
 	const url = `tambah-stok-masuk.html`;
 	window.location.href = url;
 	}
-    });
+	    
+    }
+  });
+
+	  
+    
   </script>
 	
   <meta charset="UTF-8">
