--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -256,17 +256,7 @@
 
   <script>
 
-let skipBack = true; // supaya tidak looping terus-terusan
 
-window.addEventListener('popstate', function (event) {
-
-	alert('deteksi back!');
-	
-if (skipBack) {
-    skipBack = false; // supaya cuma sekali trigger
-    history.go(-2);    // mundur 2 halaman
-  }
-});
 	  
 	const params = new URLSearchParams(window.location.search);
     const tanggal = params.get('tgl');
@@ -355,6 +345,59 @@ if (skipBack) {
       const value_2 = document.getElementById('aktivitasStatus').innerText; // or textContent
 	  //const flag = false;
       const url = `pilih-aktivitas.html?tgl=${encodeURIComponent(value_1)}&aktv=${encodeURIComponent(value_2)}`;
+      window.location.href = url;
+      //window.location.replace(url);
+    }
+
+
+function sendData_3() {
+
+//state, title, url
+	
+	const state = 'BOBON';
+	const title = 'BOBON2';
+	const url = 'pilih-aktivitas';
+	
+	history.pushState({ page: state }, title, '?page=' + url);
+
+
+	// Update page content dynamically
+ // document.body.innerHTML = '<h1>' + pageName + '</h1><button onclick="backHandler()">Back</button>';
+
+	document.body.innerHTML =
+	'<div class="top-bar" onclick="sendDataBack_SS()">'+
+		'<svg fill="none" viewBox="0 0 24 24"><path stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7"/></svg>'+
+    			'Kembali'+
+  	'</div>'+
+		
+	'<div class="section-title">Pilih Aktivitas</div>'+
+  	'<div class="subsection">Depok</div>'+
+
+  	'<div class="container">'+
+    		'<button class="button-option" onclick="sendData_SS(this)">Harian</button>'+
+    		'<button class="button-option" onclick="sendData_SS(this)">Rekapitulasi Tambahan</button>'+
+    		'<div class="desc">'+
+      			'Pilih rekapitulasi tambahan untuk barang yang tidak diketahui pasti tanggal datangnya dan berasal dari beberapa tanggal yang berbeda.'+
+    		'</div>'+
+  	'</div>';
+
+    }
+
+function sendData_SS(button) {
+      const value = button.innerText; // Or button.textContent
+      const params = new URLSearchParams(window.location.search);
+      const tanggal = params.get('tgl') || 'Belum dipilih';
+	  localStorage.setItem('flagBack', 'true');
+      const url = `pilih-tanggal-dan-aktivitas.html?tgl=${encodeURIComponent(tanggal)}&aktv=${encodeURIComponent(value)}`;
+      window.location.href = url;
+      //window.location.replace(url);
+    }
+
+    function sendDataBack_SS() {
+      const params = new URLSearchParams(window.location.search);
+      const tanggal = params.get('tgl') || 'Belum dipilih';
+      const aktivitas = params.get('aktv') || 'Belum dipilih';
+      const url = `pilih-tanggal-dan-aktivitas.html?tgl=${encodeURIComponent(tanggal)}&aktv=${encodeURIComponent(aktivitas)}`;
       window.location.href = url;
       //window.location.replace(url);
     }
