--- a/pilih-catatan.html
+++ b/pilih-catatan.html
@@ -160,7 +160,7 @@
   <div class="subsection">Depok</div>
 
   <div class="container">
-    <div class="menu-card cyan" onclick="window.location.replace('file:///Users/pfy160/Documents/Rezy/V1-1-1/mockup/operasional/stok-masuk/stok-masuk.html')">
+    <div class="menu-card cyan" onclick="window.location.replace('/mockup/operasional/stok-masuk/stok-masuk.html')">
       <div class="menu-icon">
         <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1744557689/icon-stok-masuk_pc2fo4.png" alt="Stok Masuk">
       </div>
