--- a/operasional/stok-masuk/stok-masuk.html
+++ b/operasional/stok-masuk/stok-masuk.html
@@ -145,7 +145,7 @@
   <div class="subsection">Depok</div>
 
   <div class="container">
-    <div class="menu-card" onclick="window.location.replace('file:///Users/pfy160/Documents/Rezy/V1-1-1/mockup/operasional/stok-masuk/tambah-catatan/tambah-stok-masuk.html')">
+    <div class="menu-card" onclick="window.location.replace('/mockup/operasional/stok-masuk/tambah-catatan/tambah-stok-masuk.html')">
       <div class="menu-icon">
         <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1744558351/icon-tambah-catatan_lzchwt.png" alt="Tambah Catatan">
       </div>
