--- a/operasional/stok-masuk/tambah-catatan/tambah-stok-masuk.html
+++ b/operasional/stok-masuk/tambah-catatan/tambah-stok-masuk.html
@@ -215,7 +215,7 @@
 </head>
 <body>
 
-  <div class="top-bar" onclick="window.location.replace('file:///Users/pfy160/Documents/Rezy/V1-1-1/mockup/operasional/stok-masuk/stok-masuk.html')">
+  <div class="top-bar" onclick="window.location.replace('/mockup/operasional/stok-masuk/stok-masuk.html')">
     <svg fill="none" viewBox="0 0 24 24"><path stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7"/></svg>
     Kembali
   </div>
