--- a/operasional/stok-masuk/stok-masuk.html
+++ b/operasional/stok-masuk/stok-masuk.html
@@ -152,7 +152,7 @@
       <div class="menu-label">Tambah Catatan</div>
     </div>
 
-	<div class="menu-card" onclick="window.location.replace('file:///Users/pfy160/Documents/Rezy/V1-1-1/mockup/operasional/stok-masuk/lihat-catatan/lihat-stok-masuk.html')">
+	<div class="menu-card" onclick="window.location.replace('/mockup/operasional/stok-masuk/lihat-catatan/lihat-stok-masuk.html')">
       <div class="menu-icon">
         <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1744558352/icon-lihat-catatan_mkbhbe.png" alt="Lihat Catatan">
       </div>
