--- a/pilih-gudang.html
+++ b/pilih-gudang.html
@@ -143,7 +143,7 @@
       </div>
       <div>
         <div class="menu-label">Subang</div>
-        <div class="menu-desc">Jalan Lapangan Bola No. 212</div>
+        <div class="menu-desc">Jalan Sangkuriang No. 3, Kecamatan Bagas, Kelurahan Ampel</div>
       </div>
     </div>
 
