--- a/pilih-catatan.html
+++ b/pilih-catatan.html
@@ -166,7 +166,7 @@
       </div>
       <div>
         <div class="menu-label">Stok Masuk</div>
-        <div class="menu-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+        <div class="menu-desc">Barang baru datang? Yuk, catat stoknya sekarang juga!</div>
       </div>
     </div>
 
@@ -176,7 +176,7 @@
       </div>
       <div>
         <div class="menu-label">Produksi Bal Pres</div>
-        <div class="menu-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+        <div class="menu-desc">Hasil produksi bal pres sudah jadi? Catat di sini!</div>
       </div>
     </div>
 
@@ -186,7 +186,7 @@
       </div>
       <div>
         <div class="menu-label">Stok Keluar</div>
-        <div class="menu-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+        <div class="menu-desc">Barang sudah keluar? Langsung catat di sini yuk!</div>
       </div>
     </div>
 
@@ -196,7 +196,7 @@
       </div>
       <div>
         <div class="menu-label">Stok Opnam</div>
-        <div class="menu-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+        <div class="menu-desc">Stok opname harian belum dicatat? Ayo catat sekarang juga!</div>
       </div>
     </div>
   </div>
