--- a/operasional/stok-masuk/lihat-catatan/pilih-daftar-timbangan.html
+++ b/operasional/stok-masuk/lihat-catatan/pilih-daftar-timbangan.html
@@ -109,16 +109,21 @@
 	}
 
 	.data-box {
-      border: 1.5px solid #3e833f;
-      padding: 14px;
-      border-radius: 8px;
-      width: 100%;
-      max-width: 360px;
-      color: #3e833f;
-      background-color: white;
-      cursor: pointer;
-      transition: background-color 0.3s;
-	  text-align: center;
+	border: 1.5px solid #3e833f;
+	padding: 14px;
+	border-radius: 8px;
+	width: 100%;
+	max-width: 360px;
+	color: #3e833f;
+      	background-color: white;
+      	cursor: pointer;
+      	transition: background-color 0.3s;
+	text-align: center;
+	-webkit-user-select: none; /* Safari */
+      	-moz-user-select: none;    /* Firefox */
+      	-ms-user-select: none;     /* IE10+/Edge */
+      	user-select: none;         /* Standard */
+      	-webkit-touch-callout: none;
 	}
 
 	/*.data-box {
