--- a/operasional/stok-masuk/tambah-catatan/tambah-stok-masuk.html
+++ b/operasional/stok-masuk/tambah-catatan/tambah-stok-masuk.html
@@ -359,7 +359,7 @@
 		localStorage.removeItem('data_brg');
 		  
 	    // Redirect ke halaman tujuan
-	    window.location.replace('file:///Users/pfy160/Documents/Rezy/V1-1-1/mockup/operasional/stok-masuk/stok-masuk.html');
+	    window.location.replace('/mockup/operasional/stok-masuk/stok-masuk.html');
 	  } else {
 	    // Tidak jadi simpan
 	    alert("Penyimpanan dibatalkan.");
